fix: adjust gaps in top section

--- a/shelter/style/style.css
+++ b/shelter/style/style.css
@@ -453,7 +453,7 @@ a[href="tel:+136745677554"]::before {
     justify-content: center;
     padding-top: 60px;
     min-height: 788px;
-    gap: 3.5%;
+    gap: 100px;
 }
 
 .top-content {
@@ -795,7 +795,6 @@ a[href="tel:+136745677554"]::before {
     .about-content {
         order: -1;
     }
-
 
     .footer {
         height: 639px;
